--- a/Samples/DotNetCore22Sample/Views/Home/Index.cshtml
+++ b/Samples/DotNetCore22Sample/Views/Home/Index.cshtml
@@ -140,6 +140,7 @@
     <h1>BigBlueButtonAPI.NET - BigBlueButton API .NET Standard SDK</h1>
     <p>
         It helps the .NET Framework application or the .NET Core application integrate with BigBlueButton API, <b>quickly and easily</b>.
+        <br/><a href="https://www.nuget.org/packages/BigBlueButtonAPI.NET/" target="_blank">NuGet package is available</a>
     </p>
     <p>
         What is BigBlueButton?
@@ -373,7 +374,7 @@
         <li>
             How to use it in your ASP.NET Core project?
             <ul>
-                <li>Add the reference <b>BigBlueButtonAPI.NET.dll</b> to your project.</li>
+                <li>Add the reference <b>BigBlueButtonAPI.NET.dll</b> or install NuGet Package <b>BigBlueButtonAPI.NET</b> to your project.</li>
                 <li>If your project doesn't reference the NuGet Package <b>Newtonsoft.Json 10.0.1</b> or higher, please add reference.</li>
             </ul>
         </li>
@@ -381,7 +382,7 @@
             How to use it in your ASP.NET project?
             <ul>
                 <li>You project should target .NET Framework 4.6 or higher.</li>
-                <li>Add the reference <b>BigBlueButtonAPI.NET.dll</b> to your project.</li>
+                <li>Add the reference <b>BigBlueButtonAPI.NET.dll</b> or install NuGet Package <b>BigBlueButtonAPI.NET</b> to your project.</li>
                 <li>If your project doesn't reference the NuGet Package <b>Newtonsoft.Json 10.0.1</b> or higher, please add reference.</li>
                 <li>If your project doesn't reference the NuGet Package <b>System.Reflection.TypeExtensions 4.3.0</b> or higher, please add reference.</li>
             </ul>
